<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.calculator.MainActivity">

    <Button
        android:text="@string/seven_digit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="11dp"
        android:id="@+id/seven" />

    <Button
        android:text="@string/eight_digit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/seven"
        android:layout_toEndOf="@+id/seven"
        android:id="@+id/eight" />

    <Button
        android:text="@string/nine_digit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/eight"
        android:layout_toEndOf="@+id/eight"
        android:id="@+id/nine" />

    <Button
        android:text="@string/plus_symbol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/nine"
        android:layout_toEndOf="@+id/nine"
        android:id="@+id/plus" />

    <Button
        android:text="@string/four_digit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/seven"
        android:layout_alignStart="@+id/seven"
        android:id="@+id/four" />

    <Button
        android:text="@string/five_digit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/plus"
        android:layout_toStartOf="@+id/nine"
        android:id="@+id/five" />

    <Button
        android:text="@string/six_digit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nine"
        android:layout_toEndOf="@+id/eight"
        android:id="@+id/six" />

    <Button
        android:text="@string/minus_symbol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/six"
        android:layout_toEndOf="@+id/nine"
        android:id="@+id/minus" />

    <Button
        android:text="@string/one_digit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/four"
        android:layout_alignStart="@+id/four"
        android:id="@+id/one" />

    <Button
        android:text="@string/two_digit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/five"
        android:layout_toEndOf="@+id/one"
        android:id="@+id/two" />

    <Button
        android:text="@string/per_symbol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/three"
        android:layout_toEndOf="@+id/three"
        android:id="@+id/per" />

    <Button
        android:text="@string/point_symbol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/two"
        android:layout_alignStart="@+id/one"
        android:id="@+id/point" />

    <Button
        android:text="@string/zero_digit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/two"
        android:layout_toEndOf="@+id/point"
        android:id="@+id/zero" />

    <Button
        android:text="@string/equals_symbol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/two"
        android:layout_toStartOf="@+id/per"
        android:id="@+id/equals" />

    <Button
        android:text="@string/over_symbol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/three"
        android:layout_toEndOf="@+id/equals"
        android:id="@+id/slash" />

    <Button
        android:text="@string/three_digit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/three"
        android:layout_alignBaseline="@+id/two"
        android:layout_alignBottom="@+id/two"
        android:layout_toEndOf="@+id/two" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/display"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_above="@+id/seven"
        android:layout_alignStart="@+id/seven"
        tools:ignore="LabelFor" />
</RelativeLayout>
